--- a/youtube.css
+++ b/youtube.css
@@ -1,6 +1,4 @@
-body {
-  /* background-color: #1b1b1b; */
-}
+
 
 header {
   display: flex;
@@ -282,7 +280,7 @@ h4 {
   justify-content: space-around;
 }
 .bordered {
-  border: 2px solid black;
+  border: .1px solid #1b1b1b;
 }
 /* start of xxx's edits */
 #xxx {
@@ -591,3 +589,4 @@ body {
   body {
     background-color: rgb(0, 0, 0);
   }
+}
